<resources>
    <string name="app_name">Seoul tour</string>
    <string name="facebook_app_id">1915775998689286</string>
    <string name="title_activity_messenger">MessengerActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="info_text1">위치</string>
    <string name="info_text2">정보제공</string>
    <string name="info_text3">관련 홈페이지</string>
    <string name="info_text4">전화번호</string>
    <string name="info_text5">관광지 내용</string>

    <string name="join_title">상세 정보</string>
    <string name="join_name">이름 : </string>
    <string name="join_gender">성별 : </string>
    <string name="join_birth">생일 : </string>
    <string name="join_nation">나라 : </string>
    <string name="join_lang">언어 : </string>
    <string name="join_radio1">가이드</string>
    <string name="join_radio2">관광객</string>
    <string name="join_btn1">설정</string>
    <string name="join_btn2">가입하기</string>
    <string name="join_memo">메모 : </string>

    <string name="item_name">이름 :</string>
    <string name="item_gender">성별 :</string>
    <string name="item_birth">나이 :</string>
    <string name="item_lang">언어 :</string>

    <string name="popup_title">상세정보</string>
    <string name="popup_btn1">신청</string>
    <string name="popup_btn2">닫기</string>

    <string name="request_time">일시</string>
    <string name="request_place">장소</string>
    <string name="request_ok_button">신청</string>
    <string name="request_cancel_button">거절</string>
    <string name="request_message_button">메시지</string>
</resources>
