<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/join_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/join_name"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/join_gender"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/gender_edittext"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:focusableInTouchMode="false"
            android:text="@string/join_birth"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/birthday_edittext"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="2"
            android:text=""
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/birthday_option_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/join_btn1"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/join_nation"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nation_edittext"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="nation"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/join_lang"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/language_edittext"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="language"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/select_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.19"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/guide_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/join_radio1" />

            <RadioButton
                android:id="@+id/tourist_radiobutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/join_radio2" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/join_memo"
            android:textSize="12dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/introduce_edittext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.25"
            android:background="#ffffff"
            android:ems="10"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="top|left"
            android:text=""/>

    </LinearLayout>

    <Button
        android:id="@+id/join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/join_btn2" />

</LinearLayout>