<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight=".30"
            android:layout_margin="10dp"
            android:background="@drawable/pop_back"
            android:orientation="vertical"
            android:weightSum="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".99"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/popup_title"
                        android:textColor="#000000"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/txtContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#000000"
                        android:layout_marginLeft="20dp"
                        android:textSize="20sp" />
                </LinearLayout>


            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/member_detail_ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/buttonback"
                    android:padding="15dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#ffffff"
                    android:text="@string/popup_btn1" />

                <Button
                    android:id="@+id/member_detail_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:background="@drawable/buttonback1"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#ffffff"
                    android:text="@string/popup_btn2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</RelativeLayout>